--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,22 @@
       <scope>compile</scope>
     </dependency>
 
+
+
+    <dependency>
+      <groupId>org.eclipse.collections</groupId>
+      <artifactId>eclipse-collections-api</artifactId>
+      <version>11.1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.eclipse.collections</groupId>
+      <artifactId>eclipse-collections</artifactId>
+      <version>11.1.0</version>
+    </dependency>
+
+
+
   </dependencies>
 
   <build>
