--- a/pom.xml
+++ b/pom.xml
@@ -25,18 +25,23 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+    <!--dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
-      <version>3.0.0</version>
-    </dependency>
+      <version>3.1.0</version>
+    </dependency-->
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>eclipselink</artifactId>
-      <version>3.0.3</version>
+      <version>4.0.0-M3</version>
     </dependency>
+    <!--dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.1.6.Final</version>
+    </dependency-->
 
-    <dependency>
+  <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>2.1.214</version>
@@ -74,7 +79,11 @@
       <version>11.1.0</version>
     </dependency>
 
-
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>1.9.4</version>
+    </dependency>
 
   </dependencies>
 
